fix overflow

--- a/src/components/TotalTable/TotalTable.scss
+++ b/src/components/TotalTable/TotalTable.scss
@@ -74,7 +74,7 @@
   }
 
   &__overflow {
-    overflow: scroll;
+    overflow-x: auto;
     scrollbar-width: thin;
   }
 
